# zktrie

./: .gitignore  Cargo.toml  README.md  build.rs  c.go  go.mod  go.sum  lib.go
docs/: zktrie.md
rs_zktrie/: .gitignore  Cargo.toml
rs_zktrie/src/: db.rs  hash.rs  lib.rs  raw.rs  trie.rs  types.rs
src/: constants.rs  db.rs  go_lib.rs  hash.rs  inner.rs  lib.rs  proof.rs  raw.rs  rs_lib.rs  trie.rs  types.rs
trie/: trie_test.go  zk_trie.go  zk_trie_database.go  zk_trie_database_test.go  zk_trie_impl.go  zk_trie_impl_test.go  zk_trie_node.go  zk_trie_node_test.go  zk_trie_proof.go  zk_trie_proof_test.go  zk_trie_test.go
types/: README.md  byte32.go  byte32_test.go  hash.go  hash_test.go  types_test.go  util.go  util_test.go
