[package]
name = "zktrie_rust"
authors = ["xgao@zoyoe.com"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zktrie_rust"
path = "src/lib.rs"

[dependencies]
strum = "0.24.1"
strum_macros = "0.24.1"
lazy_static = "1.4.0"
hex = "0.4"
num-derive = "0.3"
num-traits = "0.2"
num = "0.4"

[dev-dependencies]
ff = "0.12"
poseidon = { git = "https://github.com/lanbones/poseidon" }
halo2_proofs = { git = "https://github.com/DelphinusLab/halo2-gpu-specific.git", default-features = true }
