[workspace]
members = ["rs_zktrie"]

[workspace.package]
edition = "2021"
version = "0.3.0"

[workspace.dependencies]
hex = "0.4"

[package]
name = "zktrie"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# links = "zktrie"

[dependencies]
zktrie_rust = { path = "rs_zktrie"}


[build-dependencies]
gobuild = { git = "https://github.com/scroll-tech/gobuild.git" }

[dev-dependencies]
hex.workspace = true
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }
poseidon-circuit = { git = "https://github.com/scroll-tech/poseidon-circuit.git", branch = "main" }

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.1" }


[features]
rs_zktrie = []
default = ["rs_zktrie"]
